# ProtoForgeAI

./: README.md  pyproject.toml
docs/: index.html
src/mas/: __init__.py  cli.py  models.py  system.py
src/mas/agents/: architecture_agent.py  evaluation_agent.py  implementation_agent.py  orchestrator_agent.py  specification_agent.py  testing_agent.py
src/multi_agent_prototype_builder.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_system.py
